--- a/style.css
+++ b/style.css
@@ -8,13 +8,26 @@ body {
 }
 
 .btn-primary {
-    background-color: #FD6E0A;
+    background: #FD6E0A;
     border-radius: 5px;
     border: 0;
     color: white;
     font-size: 20px;
     font-weight: 700;
     padding: 15px 35px;
+}
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
 
 nav {
@@ -47,16 +60,111 @@ nav a {
 
 /* header related styles */
 .header {
-    background-color: #FFF8F3;
+    background: #FFF8F3;
     /* background-color: #474747; */
+    background-image: url('./images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 300px 150px;
+    padding: 30px 0px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    /* justify-content: end; */
+}
+
+.banner-content {
+    max-width: 500;
 }
 
 .profile {
-    width: 350px;
+    width: 500px;
+    /* margin-left: 550px; */
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section {
+    /* margin-top: 40px; */
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    /* background-color: #757575; */
+    margin: 130px;
+}
+
+.about-info {
+    text-align: center;
+}
+
+/* .section-container {
+    background-color: #474747;
+} */
+
+#what-i-do {
+    padding: 30px 150px;
+}
+
+.skill-container {
+    display: flex;
+    gap: 24px;
+
+    /* justify-content: space-around;
+    height:300px; */
+}
+
+.skill {
+
+    /* border: 5px solid red; */
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgb(0, 0, 0, 0.06);
+    /* margin-right: 30px;
+    text-align: center; */
+    /* box-shadow: 15px 28px solid rgb(37, 163, 205); */
+    /* background-color: #757575; */
+}
+
+.section-description {}
+
+.skill img {
+    /* margin-top: 30px; */
+}
+
+.resume-column-title {
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
