--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ nav a {
 .header {
     background: #FFF8F3;
     /* background-color: #474747; */
-    background-image: url('./images/header_bg.png');
+    background-image: url('./images/header_bg.png'), url('./images/developer.png');
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right, top left;
 }
 
 .banner {
@@ -167,4 +167,26 @@ main section {
     color: #474747;
     font-size: 30px;
     font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-institute,
+.resume-item-description {
+    color: #757575;
+}
+
+.download-cv {
+    text-align: center;
+    margin-top: 50px;
+}
+
+footer {
+    display: flex;
+    background: #FFF8F3;
+    padding: 130px 100px;
+    margin-top: 100px;
 }
