--- a/style.css
+++ b/style.css
@@ -189,4 +189,21 @@ footer {
     background: #FFF8F3;
     padding: 130px 100px;
     margin-top: 100px;
+    gap: 100px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 24px;
+    padding: 18px 35px;
+    /* color: #757575; */
+    /* background-color: #FFF; */
+    /* border: 0; */
+    width: 100%;
 }
